Fixed deprecated usage